objects/Office__c.object
<CustomObject>
    <label>Office</label>
    <nameField>
        <label>Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OPEN</fullName>
                </value>
                <value>
                    <fullName>CLOSED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeId__c</fullName>
        <displayFormat>Off-{00}</displayFormat>
        <label>OfficeId</label>
        <type>AutoNumber</type>
    </fields>
    <recordTypes>
        <fullName>Open</fullName>
        <active>true</active>
        <label>Open</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed</fullName>
        <active>false</active>
        <label>Closed</label>
    </recordTypes>
</CustomObject>